2007-09-23 Samuel Abels <http://debain.org>

	* lib/Exscript/*.py: Greatly improved the error handling of the parser.
	* lib/Exscript/Regex.py, lib/Exscript/Regex.py: Detect whether the correct
	number of match groups is used in a regular expression.
	* lib/Exscript/Execute.py, lib/Exscript/TerminalConnection/*.py: Moved the
	response error handling out of the Exscript interpreter into the connection
	code. This will let us improve error handling in the future.

2007-09-22 Samuel Abels <http://debain.org>

	* lib/Exscript/String.py: It is now possible to use \r and \n in strings.
	* lib/Exscript/ExpressionNode.py: Strings may now be concatenated using the
	"." operator.
	* lib/Exscript/Code.py, lib/Exscript/ExpressionNode.py: Added "in" and "not
	in" operators for searching through a list.

2007-09-21 Samuel Abels <http://debain.org>

	* lib/Exscript/Execute.py, lib/Exscript/Token.py, lib/Exscript/String.py:
	Fixed a bug that escaping of some characters outside of code context did not
	work.
	Fixed another bug that escaping quotes in a string would not work. Added 
	support for using $-prefixed variable names in strings.
	* lib/Exscript/Execute.py: Added the builtin variable "response", that now
	includes the response of the last command.
	* lib/Exscript/Exscript.py: #-prefixed lines are now comments.

2007-09-20 Samuel Abels <http://debain.org>

	* lib/Exscript/*.py: Added missing copyleft headers.
	* lib/Exscript/stdlib/*: Reorganized the standard library such that every
	function has it's own file. Fixed sys.wait().
	* lib/Exscript/Parser.py: Fixed the debug argument of the constructor.

2007-09-19 Samuel Abels <http://debain.org>

	* *.py: Backported such that Python 2.2 is now also supported.
	* exscript.py: Load the protocol adapters dynamically, such that 
	SSH related modules are not required when Telnet is used.
	* lib/TerminalConnection/*.py: Further improved prompt recognition.

2007-09-12 Samuel Abels <http://debain.org>
